# MAI_OOP

./: CMakeLists.txt  README.md  f1  main.cpp
Desktop/MAI_OOP/lab_4/include/: Pentagon.h  Vector.h
Desktop/MAI_OOP/lab_4/src/: Hexagon.cpp  Octagon.cpp  Pentagon.cpp  Vector.cpp  main.cpp
Desktop/MAI_OOP/lab_4/tests/: test.cpp
Desktop/MAI_OS/lab_2_os/: main
include/: BattleSimulator.h  BattleVisitor.h  DerivedNPCs.h  Figure.h  Hexagon.h  MemoryResource.h  NPC.h  NPCFactory.h  Observers.h  Octagon.h  Pentagon.h  Stack.h  Vector.h  seven.h
src/: BattleSimulator.cpp  BattleVisitor.cpp  FearOfNumbers.cpp  FearOfNumbers.h  NPC.cpp  NPCFactory.cpp  Observers.cpp  Vector.cpp  main.cpp  seven.cpp
tests/: test.cpp
